--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -1,4 +1,13 @@
-.links {
-  justify-content: space-evenly;
-  display: inline-block;
+.nav {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.nav .links {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.nav .links .link {
+  margin-right: 20px;
 }
